# courses

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: backend-ci.yml  frontend-ci.yml
apps/backend/: .env.example  Cargo.toml  README.md  backend.md  docker-compose.yaml  justfile
apps/backend/migration/src/: lib.rs  m20260412_145848_create_courses.rs
apps/backend/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  state.rs
apps/backend/src/db/: connection.rs  mod.rs  queries.rs
apps/backend/src/db/entity/: courses.rs  mod.rs  prelude.rs
apps/backend/src/endpoints/: friends.rs  mod.rs  schedules.rs  starred_courses.rs
apps/frontend/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
apps/frontend/src/: app.html
apps/frontend/src/components/: Header.svelte
apps/frontend/src/lib/components/: CourseCard.svelte  Footer.svelte  Header.svelte  ProfileSidebar.svelte  ThemeToggle.svelte
apps/frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  layout.css
apps/frontend/src/routes/profile/: +layout.svelte  +page.svelte
apps/frontend/src/routes/profile/saved/: +page.svelte
src/routes/: +page.svelte
